# kittysploit-framework

./: .gitignore  LICENSE  README.md  USAGE.md  client_api.py  client_rpc.py  env_setup.py  kittyapi.py  kittycollab.py  kittyconsole.py  kittymcp_client.py  kittymcp_server.py  kittyrpc.py  kittyupdate.py  pyproject.toml
core/: browser_server.py  charter_manager.py  collab_client_simple.py  collab_server_simple.py  config.py  db_manager.py  debug_manager.py  doctor.py  encryption_manager.py  entry_console.py  guardian_manager.py  history_manager.py  interactive_input_manager.py  interpreter.py  job_manager.py  module_analyzer_dev.py  module_inventory.py  module_loader.py  module_search.py  module_sync_manager.py  output_handler.py  plugin_manager.py  portal_client.py  proxy_manager.py  scope_manager.py  session.py  session_manager.py  tor_manager.py  tor_requests_wrapper.py  version.py  workspace_intel.py  workspace_manager.py  xss_injection.js
core/api_module_generator/: __init__.py  generator.py
core/attack_mapping/: __init__.py  catalog.py  constants.py  exporters.py  models.py  parser.py
core/campaign/: __init__.py  browser_c2.py  graph_builder.py
core/demo/: base.py  session_manager.py
core/detection/: __init__.py  pack_generator.py  post_telemetry.py
core/framework/: __init__.py  analysis.py  auxiliary.py  backdoor.py  base_module.py  browser_auxiliary.py  browser_exploit.py  checkcode.py  connection_watchdog.py  dockerenvironment.py  encoder.py  enums.py  evidence_adapter.py  exploit.py  exploit_base.py  failure.py  finding_adapter.py  framework.py  listener.py  local_exploit.py  module_context.py  module_executor.py  nops.py  payload.py  plugin.py  post.py  scanner.py  shortcut.py  transform.py  vagrantenvironment.py  workflow.py
core/lab_orchestrator/: __init__.py  agent_verifiers.py  attestation.py  loader.py  manifest.py  models.py  runner.py
core/lib/: __init__.py  adb_session_utils.py  asm_to_c.py  connection_manager.py  disassembler.py  elf_analyzer.py  js_obfuscator.py  module_manager.py  pe_analyzer.py  remote_connection.py  rop_lib.py  shellcode_aes.py  shellcode_generator.py  tunnel_proxy.py
core/models/: encrypted_fields.py  kittycluster_models.py  models.py
core/module_generator/: __init__.py  generator.py
core/observability/: __init__.py  context.py  manager.py  structured_logging.py
core/osint/: __init__.py  config.py  evidence.py  gdpr.py  identity_handles.py  intel_synthesis.py  mitre_mapping.py  module_loader.py  opsec.py  password_profiling.py  persist.py  providers.py  reports.py  stix_exporter.py
core/payload_generation/: README.md  __init__.py  adapter.py  models.py
core/payload_templates/: __init__.py  zig_meterpreter_bind_tcp.py  (+1 more)
data/: __init__.py
install/: build_deb.sh  env_setup.py  install-standalone.sh  install-termux.sh  install.bat  install.sh  install_config.json  install_part.bat  requirements.txt
interfaces/: api_security.py  api_server.py  cli.py  mcp_kittysploit_bridge.py  mcp_kittysploit_server.py  node_command_service.py  rpc_server.py  server_tls.py
kittysploit/: __init__.py  __main__.py
labs/: dvwa-basics.json  metasploitable-recon.json  metasploitable3-linux.json  metasploitable3-windows.json  webgoat-intro.json
modules/: __init__.py
plugins/: __init__.py  default_password.py  example.py  listen.py  metasploit.py  minicom.py  nextjs.py  ngrok.py  osint.py  router.py  web_vuln_scanner.py
scripts/: create_complex_workflow.py  kittyrelay.py
(+2112 files in other folders)
