[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kittysploit"
version = "1.1.2"
description = "KittySploit - A modular penetration testing framework"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "KittySploit Team" }
]
keywords = ["security", "pentest", "framework", "exploit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "requests-ntlm>=1.2.0",
    "msgpack>=1.0.5",
    "colorama>=0.4.4",
    "cryptography>=3.4.8",
    "pycryptodome>=3.18.0",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "aiomqtt>=1.0.0",
    "paho-mqtt>=1.6.0",
    "dnslib>=0.9.0",
    "prompt_toolkit>=3.0.0",
    "langgraph>=1.0.0,<2.0; python_version >= '3.10'",
    "flask>=2.0.0",
    "waitress>=3.0.0",
    "flask-cors>=3.0.10",
    "flask-socketio>=5.3.0",
    "fastapi",
    "python-multipart",
    "paramiko>=2.9.0",
    "scapy>=2.4.5",
    "netaddr>=0.8.0",
    "xmltodict>=0.13.0",
    "websocket-client",
    "psutil>=5.8.0",
    "pyngrok>=5.0.0",
    "bleak",
    "nava",
    "six",
    "docker",
    "sqlalchemy",
    "pymysql",
    "psycopg2-binary",
    "redis",
    "ldap3",
    "pymongo",
    "elasticsearch",
    "pymssql",
    "pysnmp",
    "pysmb",
    "toml",
    "tomli; python_version < '3.11'",
    "pyyaml>=6.0",
    "bcrypt==4.0.1",
    "pyserial",
    "pychromecast",
    "python-can",
    "bs4",
    "uvicorn",
    "mitmproxy",
    "boto3",
    "pure-python-adb",
    "pyftpdlib",
    "pyjwt",
    "Pillow",
    "mcp",
    "python-whois",
    "dnspython",
    "reportlab",
    "pypdf>=5.0.0",
    "capstone>=5.0.0",
    "yara-python>=4.5.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
# Install Windows extras: pip install kittysploit[windows]
windows = [
    "pywin32>=301",
    "winshell>=0.6",
    "pyreadline3",
]
# Developer tooling: pip install -e ".[dev]"
dev = [
    "pytest>=7.0",
]

[project.scripts]
kittysploit = "kittysploit.__main__:main"
kittyrelay = "lib.relay.kittyrelay:main"
kittymcp-server = "kittymcp_server:main"
kittymcp-client = "kittymcp_client:main"

[tool.setuptools]
py-modules = ["kittymcp_client", "kittymcp_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "interfaces*", "modules*", "lib*", "plugins*", "kittysploit*", "data*", "docs*"]
exclude = ["examples*", "scripts*", "install*", "tests*", "venv*", "apps*"]

[tool.setuptools.package-data]
"core.schemas" = ["json/v1/*.schema.json", "README.md"]
"core.workflows" = ["library/*.yaml", "library/*.yml", "library/*.json"]
"core" = [
    "browser_static/libs/*.js",
    "browser_static/icons/**/*.svg",
    "browser_static/icons/**/.gitkeep",
]
"data" = ["**/*.json", "**/*.txt", "**/*.wav", "**/*.py"]
"data.syscall" = ["*.json"]
"interfaces.static" = ["img/**/*"]
"docs" = ["screenshots/*", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --tb=short"
markers = [
    "slow: loads every discovered module (can take ~2 minutes)",
]
